--- a/02-backend/requirements.txt
+++ b/02-backend/requirements.txt
@@ -1,7 +1,29 @@
-feedparser
-google-cloud-storage
-google-generativeai
-python-dotenv
-google-cloud-firestore
-beautifulsoup4
-pydantic-settings
+annotated-types==0.7.0
+anyio==4.4.0
+cachetools==5.5.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+click==8.1.7
+fastapi==0.112.2
+google-api-core==2.19.2
+google-auth==2.34.0
+google-cloud-core==2.4.1
+google-cloud-storage==2.18.2
+google-crc32c==1.5.0
+google-resumable-media==2.7.2
+googleapis-common-protos==1.65.0
+h11==0.14.0
+idna==3.8
+proto-plus==1.24.0
+protobuf==5.28.0
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+requests==2.32.3
+rsa==4.9
+sniffio==1.3.1
+starlette==0.38.2
+typing_extensions==4.12.2
+urllib3==2.2.2
+uvicorn==0.30.6
